--- a/res/layout/activity_second.xml
+++ b/res/layout/activity_second.xml
@@ -1,5 +1,4 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,18 +6,18 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.kodetako.androidtutorial.MainActivity" >
-    
-    <EditText 
-        android:id="@+id/text_to_send"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/hint_enter_message"/>
+    android:orientation="vertical"
+    tools:context="com.kodetako.androidtutorial.SecondActivity" >
+
+    <TextView
+        android:id="@+id/result_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
     
     <Button 
-        android:id="@+id/nextButton"
+        android:id="@+id/finish_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/button_send"/>
+        android:text="@string/button_finish"/>
 
 </LinearLayout>
