--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -20,5 +20,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/button_send"/>
+    
+    <TextView 
+        android:id="@+id/result_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
