--- a/res/layout/activity_second.xml
+++ b/res/layout/activity_second.xml
@@ -2,22 +2,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
     tools:context="com.kodetako.androidtutorial.SecondActivity" >
 
     <TextView
         android:id="@+id/result_text"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    
-    <Button 
-        android:id="@+id/finish_button"
-        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <EditText 
+        android:id="@+id/response_message"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/button_finish"/>
+        android:hint="@string/hint_enter_message"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <Button
+            android:id="@+id/response_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_response" />
+        
+        <Button
+            android:id="@+id/cancel_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_cancel" />
+        
+    </LinearLayout>
 
 </LinearLayout>
